hphp/test/slow/new_object_expression/782.php.expectf
Fatal error: Uncaught exception 'RuntimeException' with message '__construct() expects exactly 2 parameters, 1 given' in %s/hphp/test/slow/new_object_expression/782.php:8
Stack trace:
%A
